<resources>
    <string name="app_name">SmartClass</string>
    <!--login-->
    <string name="prompt_email">email</string>
    <string name="prompt_password">mot de passe</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">se connecter</string>
    <string name="welcome">Bienvenue</string>
    <string name="invalid_username">email invalide</string>
    <string name="invalid_password">Mot de passe doit contenir plus de 8 caratères</string>
    <string name="signup">s\'inscrire</string>

    <string name="login_failed">"La connexion a échoué"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="descriptionLogo">logo de SmartClass</string>


    <!--Menu-->
    <string name="menu_home">Accueil</string>
    <string name="menu_task">Journal de classe</string>
    <string name="menu_test">Interrogations non signées</string>
    <string name="menu_report_card">Bulletin</string>
    <string name="menu_event">Evénement</string>
    <string name="menu_child">Choisir un enfant</string>
    <string name="menu_log_out">Déconnecter</string>

    <!--Event-->
    <string name="event_week">Cette semaine</string>
    <string name="event_month">Ce mois-ci</string>
    <string name="event_coming">Prochainement</string>

    <!--Usigned test-->
    <string name="sign">signer</string>

    <!--Task-->
    <string name="descriptionTaskType">description du imageview task</string>

    <!--Report card-->
    <string name="french">Français :</string>
    <string name="math">Math :</string>
    <string name="science">Eveil :</string>
    <string name="other">Autres :</string>
    <string name="general">Moyenne générale :</string>
    <string name="mean">Moyenne :</string>

    <!--home-->
    <string name="numberTask">tâche(s) à faire pour demain</string>
    <string name="numberUnsignedTest">interrogation(s) à signer</string>
    <string name="general_short">Général :</string>
    <string name="event_to_come">événement(s) cette semaine</string>

    <!--signup-->
    <string name="welcomeMessage">Bienvenue</string>
    <string name="confirmPassword">confirmer mot de passe</string>
    <string name="firstname">prénom</string>
    <string name="lastname">nom</string>
    <string name="phoneNumber">téléphone</string>
    <string name="register">enregistrer</string>
    <string name="invalid_name">champ obligatoire</string>
    <string name="invalid_confirm_password">mot de passe différent</string>
    <string name="invalid_phone">numéro de téléphone invalide</string>

    <!--child-->
    <string name="chooseChild">Choix de l\'enfant</string>
    <string name="addChild">Ajouter un enfant</string>
    <string name="addTheChild">connexion</string>
    <string name="childLogin">identifiant de l\'enfant</string>
    <string name="childPassword">mot de passe de l\'enfant</string>
    <string name="messageChildSecretCodeAdd">Ajouter</string>
    <string name="messageChildSecretCodeSecondPart">un Enfant</string>

    <!--toast error-->
    <string name="internetError">Vérifiez votre connexion internet!</string>
    <string name="loginError">Le mot de passe est incorrect!</string>
    <string name="generalError">Une erreur inconnue est survenue, veuillez réessayer!</string>
    <string name="queryError">Une erreur est survenue lors de la requête</string>
    <string name="signUpError">Ce compte existe déjà!</string>
    <string name="emptyFieldError">Au moins un des champs est vide!</string>
    <string name="childAlreadyLinkedError">Cet enfant à déjà été lié à ce compte!</string>
    <string name="userNotFoundError">Cet utilisateur n\'existe pas!</string>

    <!--toast ok-->
    <string name="userAdd">Compte ajouté!</string>
    <string name="childAdd">Enfant ajouté!</string>
    <string name="signTest">Test signé!</string>
    <string name="signInOk">Connexion réussie</string>




</resources>