<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/ic_menu_assignment"
            android:title="@string/menu_task" />
        <item
            android:id="@+id/nav_test"
            android:icon="@drawable/ic_menu_unsigned_test"
            android:title="@string/menu_test" />
        <item
            android:id="@+id/nav_report_card"
            android:icon="@drawable/ic_menu_report_card"
            android:title="@string/menu_report_card" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_menu_event"
            android:title="@string/menu_event" />
    </group>
</menu>